<resources>
    <string name="app_name">LoginApi</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil</string>
    <string name="Perfil">Perfil</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="Inmubles">Inmuebles</string>
    <string name="Inmuebles">Inmuebles</string>
    <string name="a_adirinmueble">añadirinmueble</string>
    <string name="contrato">Contrato</string>
    <string name="mapa">Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Inmobiliaria">Inmobiliaria</string>
    <string name="Ruben">rv98478@gmail.com</string>
    <string name="Salir">Salir</string>
</resources>