<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Inmuebles" />
        <item
            android:id="@+id/contratoFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/contrato" />
        <item
            android:id="@+id/salirFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Salir" />
    </group>
</menu>